src/snapshots/rlox__test_runtime__print_assign.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(\"\n        var s;\n        print s = \\\"s\\\";\n        \")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:2:12]
   │
 3 │         print s = "s";
   │                 ┬  
   │                 ╰── Invalid assignment at this expression depth
───╯


